# uc-preprocessing

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml  env.example
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tag_release.yml  test.yml  version_guard.yml
docs/: COMPARISON.md  DATA_PROCESSING.md  LOGGING.md  NAME_SEARCH.md
src/: config.rs  csv_helpers.rs  extractors.rs  main.rs  processors.rs  tests.rs
src/checks/: validation.rs
src/cleaners/: mod.rs  processing.rs  transformers.rs  types.rs
src/comparators/: basics.rs  mod.rs  reports.rs  runner.rs  types.rs
src/derived_traits/: calculators.rs
src/embeddings/: fingerprint.rs  mod.rs  normalization.rs  simhash.rs  trigrams.rs
src/loaders/: csv_loaders.rs  generic.rs  helpers.rs  mod.rs  reference_categories.rs  reference_cities.rs  types.rs
