[package]
name = "usporedicijene-preprocessing"
version = "1.0.0"
edition = "2024"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
rayon = "1.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
serial_test = "3.0"
